# Poetry_Project_Sultan

./: pyproject.toml
sultan_poetry/: pyvenv.cfg
sultan_poetry/Scripts/: activate  activate.bat  rst2html.py  rst2html4.py  rst2html5.py  rst2latex.py  rst2man.py  rst2odt.py  rst2odt_prepstyles.py  rst2pseudoxml.py  rst2s5.py  rst2xetex.py  rst2xml.py  rstpep2html.py
